apps/connectivity-link-instance/base/neuralbank-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neuralbank-api-route
spec:
  parentRefs:
    - name: neuralbank-gateway
      namespace: istio-system
  
  hostnames:
    - "neuralbank.apps.ocp.mm727.sandbox944.opentlc.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
        - path:
            type: PathPrefix
            value: /q
      backendRefs:
        - name: neuralbank-backend-svc
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: neuralbank-root-route
spec:
  parentRefs:
    - name: neuralbank-gateway
      namespace: istio-system
  
  hostnames:
    - "neuralbank.apps.ocp.mm727.sandbox944.opentlc.com"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /swagger-ui  
      backendRefs:
        - name: neuralbank-backend-svc
          port: 8080  

    - matches:
        - path:
            type: PathPrefix
            value: /        
      backendRefs:
        - name: neuralbank-frontend-svc
          port: 8080
